js/js.translator/testData/incremental/invalidation/inlineFunSameLibAddFile/lib1/l2.1.kt
class C {
    var x: Int = 42
}

fun bar(c: C) = tweak(c)
